# corona-parser

./: .gitignore  .python-version  README.md  cases.csv  cases.json  main.py  pyproject.toml
.github/workflows/: auto_csv.yml  main.yml  tasks.yml
gateway/: worldometer_gateway.py
services/: parser_service.py
